; ModuleID = '/home/carl/AnghaBench/linux/kernel/time/extr_timer.c_detach_timer.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/time/extr_timer.c_detach_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timer_list = type { %struct.hlist_node }
%struct.hlist_node = type { i32, i32* }

@LIST_POISON2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.timer_list*, i32)* @detach_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @detach_timer(%struct.timer_list* %0, i32 %1) #0 {
  %3 = alloca %struct.timer_list*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.hlist_node*, align 8
  store %struct.timer_list* %0, %struct.timer_list** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.timer_list*, %struct.timer_list** %3, align 8
  %7 = getelementptr inbounds %struct.timer_list, %struct.timer_list* %6, i32 0, i32 0
  store %struct.hlist_node* %7, %struct.hlist_node** %5, align 8
  %8 = load %struct.timer_list*, %struct.timer_list** %3, align 8
  %9 = call i32 @debug_deactivate(%struct.timer_list* %8)
  %10 = load %struct.hlist_node*, %struct.hlist_node** %5, align 8
  %11 = call i32 @__hlist_del(%struct.hlist_node* %10)
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %2
  %15 = load %struct.hlist_node*, %struct.hlist_node** %5, align 8
  %16 = getelementptr inbounds %struct.hlist_node, %struct.hlist_node* %15, i32 0, i32 1
  store i32* null, i32** %16, align 8
  br label %17

17:                                               ; preds = %14, %2
  %18 = load i32, i32* @LIST_POISON2, align 4
  %19 = load %struct.hlist_node*, %struct.hlist_node** %5, align 8
  %20 = getelementptr inbounds %struct.hlist_node, %struct.hlist_node* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 8
  ret void
}

declare dso_local i32 @debug_deactivate(%struct.timer_list*) #1

declare dso_local i32 @__hlist_del(%struct.hlist_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
